# upstage-ml-ai22-team2

./: .env  .gitattributes  .gitignore  LICENSE  README.md  bootstrap.ps1  bootstrap.sh  pyproject.toml
data/cache/: coords_filled_test.csv  hpp_coord_fill_block_b338ab3d1a65_apt_coord.pkl  hpp_coord_fill_block_b338ab3d1a65_apt_gudong.pkl  hpp_coord_fill_block_b338ab3d1a65_apt_index.pkl  hpp_coord_fill_block_b338ab3d1a65_coord.pkl  hpp_transport_block_bus_meta.pkl  hpp_transport_block_subway_meta.pkl
docs/: [패스트캠퍼스]-AI-부트캠프-22기_ML-2조-아파트_실거래가_예측_경진대회_발표.pptx
notebooks/: baseline_code.ipynb
notebooks/hyj/: 00_baseline_run.ipynb  01_eda.ipynb  02_geo.ipynb  02_preprocess-01.ipynb  03_house_price_prediction_fork_wjk_17725.ipynb  eda_baseline_style.md  hpp_rf_lgbm_ens.ipynb
notebooks/hyj/backup/: 01_eda.ipynb
notebooks/shw/: CodeFinal.ipynb  FinalCode.ipynb  fillcoods.ipynb  modelchoice.ipynb
notebooks/wjk/: house_price_prediction_17725.ipynb
outputs/subs/submission_RfLgbmRunner_20260111_142432Z/: meta.json  submission_RfLgbmRunner_20260111_142432Z_lgbm.csv
outputs/subs/submission_RfLgbmRunner_20260111_144413Z/: meta.json  submission_RfLgbmRunner_20260111_144413Z_ens_w70-30.csv  submission_RfLgbmRunner_20260111_144413Z_lgbm_n80_lr005_l63_m50_ff09_bf08_ra01_rl01.csv  submission_RfLgbmRunner_20260111_144413Z_rf_n300_d24_s4_l2_fsqrt.csv
script/: install_korean_fonts.sh
src/lab_core/base/: README.md  __init__.py
src/lab_core/hyj/: feature_data.py  (+9 more)
src/upstage_ml_ai22_team2_hpp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+50 files in other folders)
