[project]
name = "upstage-ml-ai22-team2-hpp"
version = "0.1.0"
requires-python = "==3.10.13"
dependencies = [
  "eli5==0.16.0",
  "matplotlib==3.10.7",
  "numpy==1.26.4",
  "pandas==2.3.3",
  "scikit-learn==1.7.2",
  "scipy==1.15.3",
  "seaborn==0.13.2",
  "statsmodels==0.14.6",
  "tqdm==4.67.1"
]

[dependency-groups]
dev = ["ipykernel==6.27.1", "jupyter==1.0.0"]

[tool.pyright]
typeCheckingMode = "basic"
include = ["src"]
ignore = ["notebooks", "notebooks/**"]
reportGeneralTypeIssues = "none"

[tool.uv]
package = true

[tool.uv.sources]
lab_core = { path = "./src/lab_core", editable = true }
