[project]
name = "upstage-ml-ai22-team2-hpp"
version = "0.1.0"
requires-python = "==3.10.13"
dependencies = [
  "eli5==0.13.0",
  "lightgbm==4.2.0",
  "matplotlib==3.7.1",
  "numpy==1.23.5",
  "pandas==1.5.3",
  "scikit-learn==1.2.2",
  "scipy==1.11.3",
  "seaborn==0.12.2",
  "statsmodels==0.14.0",
  "tqdm==4.66.1"
]

[project.scripts]
hpp_run = "lab_core.hyj.run_hpp:main"

[dependency-groups]
dev = ["ipykernel==6.27.1", "jupyter==1.0.0"]

[tool.pyright]
typeCheckingMode = "basic"
include = ["src"]
ignore = ["notebooks", "notebooks/**"]
reportGeneralTypeIssues = "none"

[tool.ruff.lint]
ignore = ["F401"]

[tool.uv]
package = true

[tool.uv.sources]
lab_core = { path = "./src/lab_core", editable = true }
